--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,97 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dWN-Q6-SHg">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="65" id="S0A-ia-6ED"/>
+                                    <constraint firstAttribute="height" constant="65" id="ba9-ma-YSX"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="beC-66-Mzd">
+                                <rect key="frame" x="0.0" y="65" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="B9g-7L-onb"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="LUL-d2-qoL">
+                                <rect key="frame" x="0.0" y="109" width="375" height="558"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ryK-JL-Kx6">
+                                <rect key="frame" x="20" y="129" width="335" height="518"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cCE-cS-kRq">
+                                    <size key="itemSize" width="105" height="105"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="LPg-eL-Ftw">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="105" height="105"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4" translatesAutoresizingMaskIntoConstraints="NO" id="bCW-4p-xmi">
+                                                    <rect key="frame" x="0.0" y="0.0" width="105" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="Oct-tk-7fq"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Charmander" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EbR-Xp-fjk">
+                                                    <rect key="frame" x="0.0" y="80" width="105" height="25"/>
+                                                    <color key="backgroundColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="12"/>
+                                                    <color key="textColor" red="0.96476962255282128" green="0.94965311925019924" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="1" green="0.99227262926061588" blue="0.99548128692557514" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="EbR-Xp-fjk" secondAttribute="trailing" id="1Yn-Cr-Mzw"/>
+                                            <constraint firstItem="bCW-4p-xmi" firstAttribute="top" secondItem="LPg-eL-Ftw" secondAttribute="top" id="AsP-tu-HVX"/>
+                                            <constraint firstItem="EbR-Xp-fjk" firstAttribute="leading" secondItem="LPg-eL-Ftw" secondAttribute="leading" id="Gu0-SQ-H4B"/>
+                                            <constraint firstItem="EbR-Xp-fjk" firstAttribute="top" secondItem="bCW-4p-xmi" secondAttribute="bottom" id="iDG-Gd-iMO"/>
+                                            <constraint firstItem="bCW-4p-xmi" firstAttribute="leading" secondItem="LPg-eL-Ftw" secondAttribute="leading" id="mNw-pn-pwJ"/>
+                                            <constraint firstAttribute="trailing" secondItem="bCW-4p-xmi" secondAttribute="trailing" id="rgK-jw-KzP"/>
+                                            <constraint firstAttribute="bottom" secondItem="EbR-Xp-fjk" secondAttribute="bottom" id="usX-r6-2yJ"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="beC-66-Mzd" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3M0-r8-Lz2"/>
+                            <constraint firstAttribute="trailing" secondItem="ryK-JL-Kx6" secondAttribute="trailing" constant="20" id="6hB-cE-07a"/>
+                            <constraint firstItem="ryK-JL-Kx6" firstAttribute="top" secondItem="beC-66-Mzd" secondAttribute="bottom" constant="20" id="6od-wb-ZOy"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ryK-JL-Kx6" secondAttribute="bottom" constant="20" id="EjC-xE-PcD"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LUL-d2-qoL" secondAttribute="bottom" id="GOd-Kk-sNi"/>
+                            <constraint firstItem="dWN-Q6-SHg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JHd-VZ-UhT"/>
+                            <constraint firstAttribute="trailing" secondItem="dWN-Q6-SHg" secondAttribute="trailing" id="Kxm-Yc-R1R"/>
+                            <constraint firstAttribute="trailing" secondItem="LUL-d2-qoL" secondAttribute="trailing" id="MzH-Dd-sFZ"/>
+                            <constraint firstItem="LUL-d2-qoL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SCr-7g-PYS"/>
+                            <constraint firstItem="ryK-JL-Kx6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="SYN-Bz-ehS"/>
+                            <constraint firstAttribute="trailing" secondItem="beC-66-Mzd" secondAttribute="trailing" id="VIr-aV-5zW"/>
+                            <constraint firstItem="LUL-d2-qoL" firstAttribute="top" secondItem="beC-66-Mzd" secondAttribute="bottom" id="fDy-QY-ZsH"/>
+                            <constraint firstItem="dWN-Q6-SHg" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kjY-Bz-e43"/>
+                            <constraint firstItem="beC-66-Mzd" firstAttribute="top" secondItem="dWN-Q6-SHg" secondAttribute="bottom" id="yot-lz-nCq"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="4" width="120" height="120"/>
+        <image name="bg" width="1920" height="1200"/>
+    </resources>
 </document>
