--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -107,6 +107,9 @@
                             <constraint firstItem="beC-66-Mzd" firstAttribute="top" secondItem="dWN-Q6-SHg" secondAttribute="bottom" id="yot-lz-nCq"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="ryK-JL-Kx6" id="wzZ-En-Q94"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
