--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -61,7 +61,7 @@
                                     <constraint firstItem="GGY-QG-H7l" firstAttribute="centerX" secondItem="dWN-Q6-SHg" secondAttribute="centerX" id="tmU-Pc-EBf"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="beC-66-Mzd">
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search Pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="beC-66-Mzd">
                                 <rect key="frame" x="0.0" y="65" width="375" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="B9g-7L-onb"/>
@@ -141,6 +141,7 @@
                     </view>
                     <connections>
                         <outlet property="collection" destination="ryK-JL-Kx6" id="wzZ-En-Q94"/>
+                        <outlet property="searchBar" destination="beC-66-Mzd" id="q4e-ZV-5pa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
