Lesson 94 Detail controller & segue

--- a/Pokedex/Base.lproj/Main.storyboard
+++ b/Pokedex/Base.lproj/Main.storyboard
@@ -142,11 +142,49 @@
                     <connections>
                         <outlet property="collection" destination="ryK-JL-Kx6" id="wzZ-En-Q94"/>
                         <outlet property="searchBar" destination="beC-66-Mzd" id="q4e-ZV-5pa"/>
+                        <segue destination="HbW-8K-OlI" kind="show" identifier="PokemonDetailVC" id="ZOn-ZR-aiZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
+            <point key="canvasLocation" x="-15" y="139"/>
+        </scene>
+        <!--Pokemon DetailVC-->
+        <scene sceneID="E8q-wZ-ePd">
+            <objects>
+                <viewController id="HbW-8K-OlI" customClass="PokemonDetailVC" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Mr-9Y-YpE"/>
+                        <viewControllerLayoutGuide type="bottom" id="P0I-oQ-Wxi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XLT-kQ-0nZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B5q-zd-r7j">
+                                <rect key="frame" x="121.5" y="323" width="131" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="131" id="MLv-MB-XPl"/>
+                                    <constraint firstAttribute="height" constant="21" id="iqs-j7-roz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="B5q-zd-r7j" firstAttribute="centerX" secondItem="XLT-kQ-0nZ" secondAttribute="centerX" id="Iy1-Qv-OMm"/>
+                            <constraint firstItem="B5q-zd-r7j" firstAttribute="centerY" secondItem="XLT-kQ-0nZ" secondAttribute="centerY" id="lDB-b6-tr5"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="nameLbl" destination="B5q-zd-r7j" id="HhU-Kb-lMW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gup-XK-kDy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="868" y="139"/>
         </scene>
     </scenes>
     <resources>
